# ai-coding-demo

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  requirement.txt
.claude/commands/: commit.md
.specify/memory/: constitution.md
backend/: .flake8  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py  startup.py
backend/src/api/: schemas.py
backend/src/db/: models.py  mongo.py
backend/src/services/: article_service.py
backend/src/utils/: logger.py
backend/tests/contract/: test_articles_api.py  test_health.py
backend/tests/e2e/: test_full_pipeline.py
docker/: backend.Dockerfile  frontend.Dockerfile  llm-entrypoint.sh  nginx.conf
docker/init-mongo/: create-indexes.js
docs/plans/: enterprise-data-intelligence-design.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
libs/intelligence-analyzer/: pyproject.toml
libs/intelligence-analyzer/src/intelligence_analyzer/: __init__.py  cli.py  models.py
libs/intelligence-analyzer/src/intelligence_analyzer/analyzers/: unified.py
libs/intelligence-analyzer/src/intelligence_analyzer/llm/: client.py  prompts.py
libs/intelligence-analyzer/src/intelligence_analyzer/utils/: logger.py  truncate.py
libs/intelligence-analyzer/tests/contract/: test_analysis_schema.py
libs/intelligence-scraper/: pyproject.toml
libs/intelligence-scraper/src/intelligence_scraper/: __init__.py  cli.py  models.py
libs/intelligence-scraper/src/intelligence_scraper/extractors/: __init__.py  base.py  nvidia.py
libs/intelligence-scraper/src/intelligence_scraper/utils/: __init__.py  cleaner.py  logger.py
libs/intelligence-scraper/tests/contract/: test_output_schema.py
specs/001-enterprise-data-intelligence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+19 files in other folders)
